[project]
name = "confamnode"
version = "0.1.1"
description = "The Nigerian AI inference gateway — access powerful AI models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "JoTeq the First", email = "joteqthefirst@gmail.com" }
]
keywords = ["ai", "llm", "nigeria", "inference", "confamnode", "joteq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.87.1",
    "python-dotenv>=1.2.2",
]

[project.urls]
Repository = "https://github.com/joteqthefirst/confamnode-sdk"
"Bug Tracker" = "https://github.com/joteqthefirst/confamnode-sdk/issues"

[dependency-groups]
dev = [
    "build>=1.5.0",
    "pytest>=9.0.3",
    "pytest-dotenv>=0.5.2",
    "setuptools>=82.0.1",
    "twine>=6.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
