[project]
name = "confamnode"
version = "0.2.5"
description = "The Nigerian AI inference gateway"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "JoTeq the First", email = "hello@confamnode.com" }
]
keywords = ["ai", "llm", "nigeria", "inference", "confamnode", "joteq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]

[project.urls]
Repository = "https://github.com/confamnodeai/confamnode"
"Bug Tracker" = "https://github.com/confamnodeai/confamnode/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-dotenv>=0.5.2",
    "anyio>=4.0.0",
    "setuptools>=70.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
anyio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
